MAJOR AI CHATBOT FIX: Fixed repeated responses issue
 FIXES IMPLEMENTED:
- Fixed conversation context memory stuck in relationship mode
- Added smart topic detection for new vs continuation messages
- Added specific handlers for greetings, emotions, and common situations
- Improved message classification to prevent generic responses
- Added variety in responses for different emotional states

 CHATBOT NOW RESPONDS DIFFERENTLY TO:
- Simple greetings (Hi, Hello, Hhhii)
- Emotional expressions (I am sad, I feel happy, I'm stressed)
- Complex conversations (relationship topics, life issues)
- Context continuations (references to previous conversations)

 DOCUMENTATION ADDED:
- Complete project guide with AI model architecture
- Crisis detection system documentation
- Technical implementation details
- System flow examples and usage patterns
- All API tokens replaced with secure placeholders

 TECHNICAL IMPROVEMENTS:
- Better emotion analysis and music recommendations
- Improved conversation continuity logic
- Enhanced crisis detection capabilities
- Optimized response generation performance

The chatbot now provides contextual, intelligent, and varied responses instead of repeating the same therapeutic message for every input.

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "kintsugi",
-    "slug": "kintsugi",
+    "name": "kintsugi icant do it again",
+    "slug": "kintsugi-icant-do-it-again",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -28,7 +28,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "4c001e23-a722-4fbc-86fc-dac80d56731a"
+        "projectId": "5dae1745-f33a-4df9-bf9a-56d240cb1f07"
       }
     }
   }
