--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^7.1.17",
     "expo": "~54.0.12",
     "expo-dev-client": "~6.0.13",
+    "expo-location": "^19.0.7",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.3.0",
     "react": "19.1.0",
