--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -16,7 +16,9 @@
     "@react-navigation/native": "^7.1.17",
     "dotenv": "^17.2.3",
     "expo": "~54.0.12",
+    "expo-av": "~16.0.7",
     "expo-constants": "^18.0.9",
+    "expo-crypto": "~15.0.7",
     "expo-dev-client": "~6.0.13",
     "expo-location": "^19.0.7",
     "expo-status-bar": "~3.0.8",
